testsuite/tests/properties/invalidation_during_mmz/expected_concrete_syntax.lkt
grammar FooGrammar {
    main_rule <- Example("example")

}

@root_node class FooNode {
}

class Example : FooNode {

    fun fetch_example_unit (): InternalUnit

    @memoized fun internal_mmz_prop (i : Int): Int =
    if (i = 0) then (raise PropertyError()) else i

    @export @memoized fun mmz_prop (i : Int): Int = {
        # Update context version by parsing a new unit
        val _ = node.fetch_example_unit;

        # Trigger a cache clear by calling another property
        # (which will call Reset_Caches).
        node.internal_mmz_prop(i)
    }
}
